--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,9 @@
 main:
-  - title: "Posts"
+  - title:
+      ko: "포스트"
+      en: "POSTS"
     url: /posts/
-  - title: "Games"
+  - title:
+      ko: "게임"
+      en: "GAMES"
     url: /games/
